# GoldMiner

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml  qt-installer-noninteractive.qs
GoldMiner/: CMakeLists.txt
GoldMiner/src/: main.cpp
GoldMiner/src/app/: app.cpp  app.h
GoldMiner/src/common/: GoldMinerDef.cpp  GoldMinerDef.h  etlbase.h  timer.h
GoldMiner/src/model/: CounterModel.cpp  CounterModel.h  Model.cpp  Model.h
GoldMiner/src/view/: CounterView.cpp  CounterView.h
GoldMiner/src/viewmodel/: CounterViewModel.cpp  CounterViewModel.h  ViewModel.cpp  ViewModel.h
GoldMiner/src/window/: CompletePage.cpp  CompletePage.h  GameOver.cpp  GameOver.h  GamePage.h  MainWindow.cpp  MainWindow.h  RunningPage.cpp  RunningPage.h  StartPage.cpp  StartPage.h
doc/: midterm_summary.md  requirement.md
